링크 연결 수정

--- a/sub/index.html
+++ b/sub/index.html
@@ -53,6 +53,32 @@
             <li><a href="./entrance.html">입학안내</a></li>
             <li><a href="./guide.html">오시는길</a></li>
           </ul>
+          <div class="ghost_info_wrap">
+            <div class="info_list_box">
+              <p class="info_list">
+                Tel
+              </p>
+              <P class="info_desc">
+                032-0000-0000
+              </P>
+            </div>
+            <div class="info_list_box">
+              <p class="info_list">
+                E-mail
+              </p>
+              <P class="info_desc">
+                dypic@gmail.com
+              </P>
+            </div>
+            <div class="info_list_box">
+              <p class="info_list">
+                Address
+              </p>
+              <P class="info_desc">
+                인천광역시 부평구 체육관로40, 대경프라자
+              </P>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -73,7 +99,14 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <img src="./assets/images/banner2.png" />
+          <img src="./assets/images/main.png" />
+          <div class="intro_text_box">
+            <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+            <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="./assets/images/banner.png" />
           <div class="intro_text_box">
             <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
             <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
@@ -98,9 +131,23 @@
           
           <div class="col-lg-8 col-md-6 col-sm-12 intro_list">
             <div class="row guide1">
-              <div class="col-md-6 list"><img src="./assets/images/list1.png" alt=""><p class="img_txt">인사말</p></div>
-              <div class="col-md-6 list"><img src="./assets/images/list2.png" alt=""><p class="img_txt">시설안내</p></div>
+              <div class="col-md-6 list">
+                <img src="./assets/images/list1.png" alt="">
+                <a href="./creative.html"><p class="img_txt">인사말</p></a>
+              </div>
+              <div class="row btn_box">
+                <a href="./creative.html" class="col-md-6 list"></a>
+              </div>
+              <!--  -->
+              <div class="col-md-6 list">
+                <img src="./assets/images/list2.png" alt="">
+                <a href="./center.html"><p class="img_txt">시설안내</p></a>
+              </div>
+              <div class="row btn_box">
+                <a href="./center.html" class="col-md-6 list"></a>
+              </div>
             </div>  
+            <!--  -->
           <div class="row guide2">
             <div class="col-md-6 list"><img src="./assets/images/list3.png" alt=""><p class="img_txt">입학안내</p></div>
               <div class="col-md-6 list"><img src="./assets/images/list4.png" alt=""><p class="img_txt">인사말</p></div>
