--- a/sub/sub_ver2/index.html
+++ b/sub/sub_ver2/index.html
@@ -83,7 +83,7 @@
       <div class="swiper-pagination"></div>
     </div>
     <!-- 여기부터 부트스트랩 -->
-    <div class="intro">
+   <div class="intro">
       <div class="container-fluid inner_container">
         <div class="row">
           <div class="col-lg-4 col-md-12 intro_text_wrap">
@@ -98,13 +98,36 @@
           
           <div class="col-lg-8 col-md-6 col-sm-12 intro_list">
             <div class="row guide1">
-              <div class="col-md-6 list"><img src="./assets/images/list1.png" alt=""><p class="img_txt">인사말</p></div>
-              <div class="col-md-6 list"><img src="./assets/images/list2.png" alt=""><p class="img_txt">시설안내</p></div>
+              <div class="col-md-6 list">
+                <img src="./assets/images/list1.png" alt="">
+                <a href="./creative.html"><p class="img_txt">인사말</p></a>
+              </div>
+              <!--  -->
+              <div class="col-md-6 list">
+                <img src="./assets/images/list2.png" alt="">
+                <a href="./center.html"><p class="img_txt">시설안내</p></a>
+              </div>
+              <div class="row btn_box">
+                <a href="./creative.html" class="col-md-6 list"></a>
+                <a href="./center.html" class="col-md-6 list"></a>
+              </div>
             </div>  
+            <!--  -->
           <div class="row guide2">
-            <div class="col-md-6 list"><img src="./assets/images/list3.png" alt=""><p class="img_txt">입학안내</p></div>
-              <div class="col-md-6 list"><img src="./assets/images/list4.png" alt=""><p class="img_txt">인사말</p></div>
-            </div>
+              <div class="col-md-6 list">
+                <img src="./assets/images/list3.png" alt="">
+                <a href="./entrance.html"><p class="img_txt">입학안내</p></a>
+              </div>
+              <!--  -->
+              <div class="col-md-6 list">
+                <img src="./assets/images/list4.png" alt="">
+                <a href="./guide.html"><p class="img_txt">오시는길</p></a>
+              </div>
+              <div class="row btn_box">
+                <a href="./entrance.html" class="col-md-6 list"></a>
+                <a href="./guide.html" class="col-md-6 list"></a>
+              </div>
+            </div>  
           </div>
         </div>
         </div>
