--- a/sub/sub_ver2/index.html
+++ b/sub/sub_ver2/index.html
@@ -11,11 +11,9 @@
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   />
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/sub_common.css">
   <link rel="stylesheet" href="../assets/css/sub.css">
-  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-  <script src="../assets/js/jquery-3.6.1.min.js"></script>
-  <script src="../assets/js/sub.js"></script>
 </head>
 <body>            
   <div class="wrap">
@@ -73,7 +71,14 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <img src="./assets/images/banner2.png" />
+          <img src="./assets/images/main.png" />
+          <div class="intro_text_box">
+            <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+            <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="./assets/images/banner.png" />
           <div class="intro_text_box">
             <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
             <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
@@ -86,7 +91,7 @@
    <div class="intro">
       <div class="container-fluid inner_container">
         <div class="row">
-          <div class="col-lg-4 col-md-12 intro_text_wrap">
+          <div data-aos="fade-right" data-aos-duration="1000" class="col-lg-4 col-md-12 intro_text_wrap">
             <div class="intro_wrap">
                 <div class="intro_txt">
                   <div class="happy_btn">+ 행복 어린이집</div>
@@ -139,6 +144,11 @@
       </footer>
   </div>
 
+ <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/sub.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script>
       var swiper = new Swiper(".mySwiper", {
         spaceBetween: 30,
@@ -157,6 +167,11 @@
         },
       });
     </script>
+
+    <script>
+  AOS.init();
+</script>
+
 
 </body>
 </html>
