--- a/sub/index.html
+++ b/sub/index.html
@@ -11,11 +11,9 @@
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   />
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/sub_common.css">
   <link rel="stylesheet" href="./assets/css/sub.css">
-  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-  <script src="./assets/js/jquery-3.6.1.min.js"></script>
-  <script src="./assets/js/sub.js"></script>
 </head>
 <body>            
   <div class="wrap">
@@ -119,7 +117,7 @@
     <div class="intro">
       <div class="container-fluid inner_container">
         <div class="row">
-          <div class="col-lg-4 col-md-12 intro_text_wrap">
+          <div data-aos="fade-right" data-aos-duration="1000" class="col-lg-4 col-md-12 intro_text_wrap ">
             <div class="intro_wrap">
                 <div class="intro_txt">
                   <div class="happy_btn">+ 행복 어린이집</div>
@@ -172,6 +170,11 @@
       </footer>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/sub.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script>
       var swiper = new Swiper(".mySwiper", {
         spaceBetween: 30,
@@ -190,6 +193,10 @@
         },
       });
     </script>
+
+    <script>
+  AOS.init();
+</script>
 
 </body>
 </html>
