--- a/sub/entrance.html
+++ b/sub/entrance.html
@@ -7,10 +7,9 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/sub_common.css">
   <link rel="stylesheet" href="./assets/css/sub.css">
-  <script src="./assets/js/jquery-3.6.1.min.js"></script>
-  <script src="./assets/js/sub.js"></script>
     <title>입학안내</title>
   </head>
   <body>
@@ -61,7 +60,7 @@
         </div>
         <div class="entr_btn"><p class="entr">입학안내</p></div>
           <div class="inner_container">
-            <div class="entr_text_box">
+            <div data-aos="fade-up" data-aos-duration="1000"  class="entr_text_box">
               <h1 class="sec_tit">입학안내</h1>
               <p class="desc s_entr_txt">저희 킨더가든은 아이들의 창의적인 생각과<br />
               올바른 성장의 밑거름으로<br />
@@ -104,5 +103,11 @@
         </div>
       </footer>
     </div>
+    <script src="./assets/js/jquery-3.6.1.min.js"></script>
+    <script src="./assets/js/sub.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+  </script>
   </body>
 </html>
