--- a/sub/guide.html
+++ b/sub/guide.html
@@ -7,10 +7,9 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/sub_common.css">
   <link rel="stylesheet" href="./assets/css/sub.css">
-  <script src="./assets/js/jquery-3.6.1.min.js"></script>
-  <script src="./assets/js/sub.js"></script>
   <title>오시는길</title>
 </head>
 <body>
@@ -60,7 +59,7 @@
       </div>
       <div class="guide_btn"><p class="guide_txt">오시는 길</p></div>
       <div class="inner_container">
-        <div class="academy_text_box">
+        <div data-aos="fade-up" data-aos-duration="1000" class="academy_text_box">
           <h1 class="sec_tit">키즈 아카데미</h1>
           <p class="desc academy_txt">키즈 아카데미로 오시는 길을<br />
           안내해 드립니다.</p>
@@ -74,5 +73,11 @@
         </div>
       </footer>
   </div>
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/sub.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+</script>
 </body>
 </html>
