--- a/sub/sub_ver2/center.html
+++ b/sub/sub_ver2/center.html
@@ -7,10 +7,9 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/sub_common.css">
   <link rel="stylesheet" href="../assets/css/sub.css">
-  <script src="./assets/js/jquery-3.6.1.min.js"></script>
-  <script src="./assets/js/sub.js"></script>
   <title>아카데미 센터</title>
 </head>
 <body>
@@ -62,7 +61,7 @@
     <!-- 여기부터 부트스트랩 -->
     <div class="center">
       <div class="container-fluid inner_container">
-        <div class="academy_text_box">
+        <div data-aos="fade-up" data-aos-duration="1000" class="academy_text_box">
           <h1 class="sec_tit">아카데미 센터</h1>
           <p class="desc academy_txt">키즈 아카데미의 교육환경을 갤러리에서 확인하세요<br />
           사진을 클릭하시면 크게 보실 수 있습니다.</p>
@@ -95,5 +94,11 @@
         </div>
       </footer>
   </div>
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/sub.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+</script>
 </body>
 </html>
