--- a/sub/sub_ver2/creative.html
+++ b/sub/sub_ver2/creative.html
@@ -7,10 +7,9 @@
    <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/sub_common.css">
   <link rel="stylesheet" href="../assets/css/sub.css">
-  <script src="./assets/js/jquery-3.6.1.min.js"></script>
-  <script src="./assets/js/sub.js"></script>
   <title>인삿말</title>
 </head> 
 <body>
@@ -64,7 +63,7 @@
       <div class="container-fluid inner_container">
         <div class="row"> 
           <div class="col-md-6 col-sm-12 creative_text_wrap">
-            <div class="creative_txt">
+            <div data-aos="fade-right" data-aos-duration="1000" class="creative_txt">
               <h2 class="sec_tit">Creative & Growth</h2>
               <p class="desc creative_s_txt">저희 키즈 아카데미는 아이들이 창의적인 인재로 성장할 수 있도록 즐거움과 학습 모두를 지향하는 교육을 위해 항상 노력하고 있습니다.<br /><br />
 
@@ -86,5 +85,11 @@
         </div>
       </footer>
   </div>
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/sub.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+</script>
 </body>
 </html>
