--- a/sub/sub_ver2/live.html
+++ b/sub/sub_ver2/live.html
@@ -7,6 +7,7 @@
    <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/sub_common.css">
   <link rel="stylesheet" href="../assets/css/sub.css">
   <title>원생활</title>
@@ -56,7 +57,7 @@
           <div class="col-md-6 col-sm-12">
             <img src="../assets/images/main6.png" alt="">
           </div>
-          <div class="col-md-6 col-sm-12 title_wrap">
+          <div data-aos="fade-left" data-aos-duration="1000" class="col-md-6 col-sm-12 title_wrap">
             <h1 class="live_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
             <p class="live_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
           </div>
@@ -101,5 +102,9 @@
   </div>
   <script src="./assets/js/jquery-3.6.1.min.js"></script>
   <script src="./assets/js/sub.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+</script>
 </body>
 </html>
