--- a/sub/sub_ver2/live.html
+++ b/sub/sub_ver2/live.html
@@ -63,7 +63,7 @@
           </div>
         </div>
           <div class="row train_list">
-            <div class="col-md-4 col-sm-12">
+            <div  data-aos="fade-up" data-aos-duration="1000"  class="col-md-4 col-sm-12">
               <img src="../assets/images/live1.png" alt="">
               <div class="solid"></div>
               <div class="one"></div>
@@ -72,7 +72,7 @@
               재미도 두배, 창의력이 세배!<br />
               우리 아이들의 놀이를 책임집니다!</p>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="col-md-4 col-sm-12">
               <img src="../assets/images/live2.png" alt="">
               <div class="solid"></div>
               <div class="one"></div>
@@ -81,7 +81,7 @@
               재미도 두배, 창의력이 세배!<br />
               우리 아이들의 놀이를 책임집니다!</p>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="col-md-4 col-sm-12">
               <img src="../assets/images/live3.png" alt="">
               <div class="solid"></div>
               <div class="one"></div>
