--- a/sub/sub_ver2/center.html
+++ b/sub/sub_ver2/center.html
@@ -67,22 +67,22 @@
           사진을 클릭하시면 크게 보실 수 있습니다.</p>
         </div>
         <div class="row">
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list mr-10">
+          <div data-aos="fade-up" data-aos-duration="1000" class="col-xl-4 col-md-6 col-sm-12 academy_list mr-10">
             <img src="../assets/images/academy1.png" alt="">
           </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+          <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="col-xl-4 col-md-6 col-sm-12 academy_list">
             <img src="../assets/images/academy2.png" alt="">
           </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+          <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="col-xl-4 col-md-6 col-sm-12 academy_list">
             <img src="../assets/images/academy3.png" alt="">
           </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+          <div data-aos="fade-up" data-aos-duration="1000" class="col-xl-4 col-md-6 col-sm-12 academy_list">
             <img src="../assets/images/academy4.png" alt="">
           </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+          <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="col-xl-4 col-md-6 col-sm-12 academy_list">
             <img src="../assets/images/academy5.png" alt="">
           </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+          <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="col-xl-4 col-md-6 col-sm-12 academy_list">
             <img src="../assets/images/academy6.png" alt="">
           </div>
         </div>
